// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Amount /> should handle "computeClasses" prop 1`] = `
<Amount
  computeClasses={[Function]}
>
  <ForwardRef(Input)
    computeClasses={[Function]}
    endAdornment={
      <Icon
        aria-label="Удалить единицу товара"
        className="button padding-right-16 cursor-pointer"
        color="gray38"
        icon={[Function]}
        role="button"
        size={16}
      />
    }
    startAdornment={
      <Icon
        aria-label="Добавить единицу товара"
        className="button padding-left-16 cursor-pointer"
        color="gray38"
        icon={[Function]}
        role="button"
        size={16}
      />
    }
  >
    <span
      className="root custom-root root-with-start-adornment root-with-end-adornment"
      onClick={[Function]}
    >
      <span
        className="adornment-container adornment-start"
      >
        <Icon
          aria-label="Добавить единицу товара"
          className="button padding-left-16 cursor-pointer"
          color="gray38"
          icon={[Function]}
          role="button"
          size={16}
        >
          <minusIcon
            aria-label="Добавить единицу товара"
            className="icon icon-gray38 icon-block button padding-left-16 cursor-pointer"
            height={16}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Добавить единицу товара"
              className="icon icon-gray38 icon-block button padding-left-16 cursor-pointer"
              height={16}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 15.75a2.25 2.25 0 1 1 0 4.5H6.75a2.25 2.25 0 0 1 0-4.5h22.5z"
              />
            </svg>
          </minusIcon>
        </Icon>
      </span>
      <input
        className="input-reset centered-text extended-input"
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <span
        className="adornment-container adornment-end"
      >
        <Icon
          aria-label="Удалить единицу товара"
          className="button padding-right-16 cursor-pointer"
          color="gray38"
          icon={[Function]}
          role="button"
          size={16}
        >
          <plusIcon
            aria-label="Удалить единицу товара"
            className="icon icon-gray38 icon-block button padding-right-16 cursor-pointer"
            height={16}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Удалить единицу товара"
              className="icon icon-gray38 icon-block button padding-right-16 cursor-pointer"
              height={16}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 20.25a2.25 2.25 0 1 0 0-4.5h-9v-9a2.25 2.25 0 1 0-4.5 0v9h-9a2.25 2.25 0 1 0 0 4.5h9v9a2.25 2.25 0 1 0 4.5 0v-9h9z"
              />
            </svg>
          </plusIcon>
        </Icon>
      </span>
    </span>
  </ForwardRef(Input)>
</Amount>
`;

exports[`<Amount /> should handle "onAdd/onSubtract/canAdd/canSubtract" props 1`] = `
<Amount
  onAdd={[MockFunction]}
  onSubtract={[MockFunction]}
>
  <ForwardRef(Input)
    computeClasses={[Function]}
    endAdornment={
      <Icon
        aria-label="Удалить единицу товара"
        className="button padding-right-16 cursor-pointer"
        color="gray38"
        icon={[Function]}
        onClick={[MockFunction]}
        role="button"
        size={16}
      />
    }
    startAdornment={
      <Icon
        aria-label="Добавить единицу товара"
        className="button padding-left-16 cursor-pointer"
        color="gray38"
        icon={[Function]}
        onClick={[MockFunction]}
        role="button"
        size={16}
      />
    }
  >
    <span
      className="root medium-width root-with-start-adornment root-with-end-adornment"
      onClick={[Function]}
    >
      <span
        className="adornment-container adornment-start"
      >
        <Icon
          aria-label="Добавить единицу товара"
          className="button padding-left-16 cursor-pointer"
          color="gray38"
          icon={[Function]}
          onClick={[MockFunction]}
          role="button"
          size={16}
        >
          <minusIcon
            aria-label="Добавить единицу товара"
            className="icon icon-gray38 icon-block button padding-left-16 cursor-pointer"
            height={16}
            onClick={[MockFunction]}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Добавить единицу товара"
              className="icon icon-gray38 icon-block button padding-left-16 cursor-pointer"
              height={16}
              onClick={[MockFunction]}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 15.75a2.25 2.25 0 1 1 0 4.5H6.75a2.25 2.25 0 0 1 0-4.5h22.5z"
              />
            </svg>
          </minusIcon>
        </Icon>
      </span>
      <input
        className="input-reset centered-text"
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <span
        className="adornment-container adornment-end"
      >
        <Icon
          aria-label="Удалить единицу товара"
          className="button padding-right-16 cursor-pointer"
          color="gray38"
          icon={[Function]}
          onClick={[MockFunction]}
          role="button"
          size={16}
        >
          <plusIcon
            aria-label="Удалить единицу товара"
            className="icon icon-gray38 icon-block button padding-right-16 cursor-pointer"
            height={16}
            onClick={[MockFunction]}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Удалить единицу товара"
              className="icon icon-gray38 icon-block button padding-right-16 cursor-pointer"
              height={16}
              onClick={[MockFunction]}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 20.25a2.25 2.25 0 1 0 0-4.5h-9v-9a2.25 2.25 0 1 0-4.5 0v9h-9a2.25 2.25 0 1 0 0 4.5h9v9a2.25 2.25 0 1 0 4.5 0v-9h9z"
              />
            </svg>
          </plusIcon>
        </Icon>
      </span>
    </span>
  </ForwardRef(Input)>
</Amount>
`;

exports[`<Amount /> should handle "size" prop 1`] = `
<Amount>
  <ForwardRef(Input)
    computeClasses={[Function]}
    endAdornment={
      <Icon
        aria-label="Удалить единицу товара"
        className="button padding-right-16 cursor-pointer"
        color="gray38"
        icon={[Function]}
        role="button"
        size={16}
      />
    }
    startAdornment={
      <Icon
        aria-label="Добавить единицу товара"
        className="button padding-left-16 cursor-pointer"
        color="gray38"
        icon={[Function]}
        role="button"
        size={16}
      />
    }
  >
    <span
      className="root medium-width root-with-start-adornment root-with-end-adornment"
      onClick={[Function]}
    >
      <span
        className="adornment-container adornment-start"
      >
        <Icon
          aria-label="Добавить единицу товара"
          className="button padding-left-16 cursor-pointer"
          color="gray38"
          icon={[Function]}
          role="button"
          size={16}
        >
          <minusIcon
            aria-label="Добавить единицу товара"
            className="icon icon-gray38 icon-block button padding-left-16 cursor-pointer"
            height={16}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Добавить единицу товара"
              className="icon icon-gray38 icon-block button padding-left-16 cursor-pointer"
              height={16}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 15.75a2.25 2.25 0 1 1 0 4.5H6.75a2.25 2.25 0 0 1 0-4.5h22.5z"
              />
            </svg>
          </minusIcon>
        </Icon>
      </span>
      <input
        className="input-reset centered-text"
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <span
        className="adornment-container adornment-end"
      >
        <Icon
          aria-label="Удалить единицу товара"
          className="button padding-right-16 cursor-pointer"
          color="gray38"
          icon={[Function]}
          role="button"
          size={16}
        >
          <plusIcon
            aria-label="Удалить единицу товара"
            className="icon icon-gray38 icon-block button padding-right-16 cursor-pointer"
            height={16}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Удалить единицу товара"
              className="icon icon-gray38 icon-block button padding-right-16 cursor-pointer"
              height={16}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 20.25a2.25 2.25 0 1 0 0-4.5h-9v-9a2.25 2.25 0 1 0-4.5 0v9h-9a2.25 2.25 0 1 0 0 4.5h9v9a2.25 2.25 0 1 0 4.5 0v-9h9z"
              />
            </svg>
          </plusIcon>
        </Icon>
      </span>
    </span>
  </ForwardRef(Input)>
</Amount>
`;

exports[`<Amount /> should handle "size" prop 2`] = `
<Amount
  size="medium"
>
  <ForwardRef(Input)
    computeClasses={[Function]}
    endAdornment={
      <Icon
        aria-label="Удалить единицу товара"
        className="button padding-right-16 cursor-pointer"
        color="gray38"
        icon={[Function]}
        role="button"
        size={16}
      />
    }
    startAdornment={
      <Icon
        aria-label="Добавить единицу товара"
        className="button padding-left-16 cursor-pointer"
        color="gray38"
        icon={[Function]}
        role="button"
        size={16}
      />
    }
  >
    <span
      className="root medium-width root-with-start-adornment root-with-end-adornment"
      onClick={[Function]}
    >
      <span
        className="adornment-container adornment-start"
      >
        <Icon
          aria-label="Добавить единицу товара"
          className="button padding-left-16 cursor-pointer"
          color="gray38"
          icon={[Function]}
          role="button"
          size={16}
        >
          <minusIcon
            aria-label="Добавить единицу товара"
            className="icon icon-gray38 icon-block button padding-left-16 cursor-pointer"
            height={16}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Добавить единицу товара"
              className="icon icon-gray38 icon-block button padding-left-16 cursor-pointer"
              height={16}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 15.75a2.25 2.25 0 1 1 0 4.5H6.75a2.25 2.25 0 0 1 0-4.5h22.5z"
              />
            </svg>
          </minusIcon>
        </Icon>
      </span>
      <input
        className="input-reset centered-text"
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <span
        className="adornment-container adornment-end"
      >
        <Icon
          aria-label="Удалить единицу товара"
          className="button padding-right-16 cursor-pointer"
          color="gray38"
          icon={[Function]}
          role="button"
          size={16}
        >
          <plusIcon
            aria-label="Удалить единицу товара"
            className="icon icon-gray38 icon-block button padding-right-16 cursor-pointer"
            height={16}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Удалить единицу товара"
              className="icon icon-gray38 icon-block button padding-right-16 cursor-pointer"
              height={16}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 20.25a2.25 2.25 0 1 0 0-4.5h-9v-9a2.25 2.25 0 1 0-4.5 0v9h-9a2.25 2.25 0 1 0 0 4.5h9v9a2.25 2.25 0 1 0 4.5 0v-9h9z"
              />
            </svg>
          </plusIcon>
        </Icon>
      </span>
    </span>
  </ForwardRef(Input)>
</Amount>
`;

exports[`<Amount /> should handle "size" prop 3`] = `
<Amount
  size="small"
>
  <ForwardRef(Input)
    computeClasses={[Function]}
    endAdornment={
      <Icon
        aria-label="Удалить единицу товара"
        className="button cursor-pointer"
        color="gray38"
        icon={[Function]}
        role="button"
        size={16}
      />
    }
    startAdornment={
      <Icon
        aria-label="Добавить единицу товара"
        className="button cursor-pointer"
        color="gray38"
        icon={[Function]}
        role="button"
        size={16}
      />
    }
  >
    <span
      className="root small-width root-with-start-adornment root-with-end-adornment"
      onClick={[Function]}
    >
      <span
        className="adornment-container adornment-start"
      >
        <Icon
          aria-label="Добавить единицу товара"
          className="button cursor-pointer"
          color="gray38"
          icon={[Function]}
          role="button"
          size={16}
        >
          <minusIcon
            aria-label="Добавить единицу товара"
            className="icon icon-gray38 icon-block button cursor-pointer"
            height={16}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Добавить единицу товара"
              className="icon icon-gray38 icon-block button cursor-pointer"
              height={16}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 15.75a2.25 2.25 0 1 1 0 4.5H6.75a2.25 2.25 0 0 1 0-4.5h22.5z"
              />
            </svg>
          </minusIcon>
        </Icon>
      </span>
      <input
        className="input-reset centered-text"
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <span
        className="adornment-container adornment-end"
      >
        <Icon
          aria-label="Удалить единицу товара"
          className="button cursor-pointer"
          color="gray38"
          icon={[Function]}
          role="button"
          size={16}
        >
          <plusIcon
            aria-label="Удалить единицу товара"
            className="icon icon-gray38 icon-block button cursor-pointer"
            height={16}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Удалить единицу товара"
              className="icon icon-gray38 icon-block button cursor-pointer"
              height={16}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 20.25a2.25 2.25 0 1 0 0-4.5h-9v-9a2.25 2.25 0 1 0-4.5 0v9h-9a2.25 2.25 0 1 0 0 4.5h9v9a2.25 2.25 0 1 0 4.5 0v-9h9z"
              />
            </svg>
          </plusIcon>
        </Icon>
      </span>
    </span>
  </ForwardRef(Input)>
</Amount>
`;

exports[`<Amount /> should handle Input props 1`] = `
<Amount
  defaultValue={123}
  disabled={true}
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onKeyDown={[MockFunction]}
>
  <ForwardRef(Input)
    computeClasses={[Function]}
    defaultValue={123}
    disabled={true}
    endAdornment={
      <Icon
        aria-label="Удалить единицу товара"
        className="button padding-right-16 cursor-pointer"
        color="gray38"
        icon={[Function]}
        role="button"
        size={16}
      />
    }
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    onKeyDown={[MockFunction]}
    startAdornment={
      <Icon
        aria-label="Добавить единицу товара"
        className="button padding-left-16 cursor-pointer"
        color="gray38"
        icon={[Function]}
        role="button"
        size={16}
      />
    }
  >
    <span
      className="root medium-width root-with-start-adornment root-with-end-adornment"
      onClick={[Function]}
    >
      <span
        className="adornment-container adornment-start"
      >
        <Icon
          aria-label="Добавить единицу товара"
          className="button padding-left-16 cursor-pointer"
          color="gray38"
          icon={[Function]}
          role="button"
          size={16}
        >
          <minusIcon
            aria-label="Добавить единицу товара"
            className="icon icon-gray38 icon-block button padding-left-16 cursor-pointer"
            height={16}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Добавить единицу товара"
              className="icon icon-gray38 icon-block button padding-left-16 cursor-pointer"
              height={16}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 15.75a2.25 2.25 0 1 1 0 4.5H6.75a2.25 2.25 0 0 1 0-4.5h22.5z"
              />
            </svg>
          </minusIcon>
        </Icon>
      </span>
      <input
        className="input-reset centered-text"
        defaultValue={123}
        disabled={true}
        onBlur={[Function]}
        onChange={[MockFunction]}
        onFocus={[Function]}
        onKeyDown={[MockFunction]}
        type="text"
      />
      <span
        className="adornment-container adornment-end"
      >
        <Icon
          aria-label="Удалить единицу товара"
          className="button padding-right-16 cursor-pointer"
          color="gray38"
          icon={[Function]}
          role="button"
          size={16}
        >
          <plusIcon
            aria-label="Удалить единицу товара"
            className="icon icon-gray38 icon-block button padding-right-16 cursor-pointer"
            height={16}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Удалить единицу товара"
              className="icon icon-gray38 icon-block button padding-right-16 cursor-pointer"
              height={16}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 20.25a2.25 2.25 0 1 0 0-4.5h-9v-9a2.25 2.25 0 1 0-4.5 0v9h-9a2.25 2.25 0 1 0 0 4.5h9v9a2.25 2.25 0 1 0 4.5 0v-9h9z"
              />
            </svg>
          </plusIcon>
        </Icon>
      </span>
    </span>
  </ForwardRef(Input)>
</Amount>
`;

exports[`<Amount /> should render without props 1`] = `
<Amount>
  <ForwardRef(Input)
    computeClasses={[Function]}
    endAdornment={
      <Icon
        aria-label="Удалить единицу товара"
        className="button padding-right-16 cursor-pointer"
        color="gray38"
        icon={[Function]}
        role="button"
        size={16}
      />
    }
    startAdornment={
      <Icon
        aria-label="Добавить единицу товара"
        className="button padding-left-16 cursor-pointer"
        color="gray38"
        icon={[Function]}
        role="button"
        size={16}
      />
    }
  >
    <span
      className="root medium-width root-with-start-adornment root-with-end-adornment"
      onClick={[Function]}
    >
      <span
        className="adornment-container adornment-start"
      >
        <Icon
          aria-label="Добавить единицу товара"
          className="button padding-left-16 cursor-pointer"
          color="gray38"
          icon={[Function]}
          role="button"
          size={16}
        >
          <minusIcon
            aria-label="Добавить единицу товара"
            className="icon icon-gray38 icon-block button padding-left-16 cursor-pointer"
            height={16}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Добавить единицу товара"
              className="icon icon-gray38 icon-block button padding-left-16 cursor-pointer"
              height={16}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 15.75a2.25 2.25 0 1 1 0 4.5H6.75a2.25 2.25 0 0 1 0-4.5h22.5z"
              />
            </svg>
          </minusIcon>
        </Icon>
      </span>
      <input
        className="input-reset centered-text"
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <span
        className="adornment-container adornment-end"
      >
        <Icon
          aria-label="Удалить единицу товара"
          className="button padding-right-16 cursor-pointer"
          color="gray38"
          icon={[Function]}
          role="button"
          size={16}
        >
          <plusIcon
            aria-label="Удалить единицу товара"
            className="icon icon-gray38 icon-block button padding-right-16 cursor-pointer"
            height={16}
            role="button"
            viewBox="0 0 36 36"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-label="Удалить единицу товара"
              className="icon icon-gray38 icon-block button padding-right-16 cursor-pointer"
              height={16}
              role="button"
              viewBox="0 0 36 36"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.25 20.25a2.25 2.25 0 1 0 0-4.5h-9v-9a2.25 2.25 0 1 0-4.5 0v9h-9a2.25 2.25 0 1 0 0 4.5h9v9a2.25 2.25 0 1 0 4.5 0v-9h9z"
              />
            </svg>
          </plusIcon>
        </Icon>
      </span>
    </span>
  </ForwardRef(Input)>
</Amount>
`;
